# nbt-structure-utils

./: LICENSE  README.md  contributors.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: branch.yaml  release.yaml  release_test.yaml
nbt_structure_utils/: __init__.py  block_state_transformations.py  blocks.py  items.py  nbt_structure.py  plot_helper.py  shapes.py
tests/: __init__.py  test_nbt_structure.py
tests/nbt_structures/: test_structure.nbt
